Update for fixing the deprecated API uses